--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@onivoro/browser-layout": "^0.37.0",
     "@sveltejs/kit": "next",
     "node-sass": "^6.0.1",
     "sass": "^1.42.1",
