--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@onivoro/browser-layout": "^0.37.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.0",
     "@sveltejs/kit": "next",
     "node-sass": "^6.0.1",
     "sass": "^1.42.1",
