--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@onivoro/browser-layout": "^0.41.0",
+    "@onivoro/browser-layout": "^0.45.0",
     "@sveltejs/adapter-static": "^1.0.0-next.21",
     "@sveltejs/kit": "next",
     "node-sass": "^6.0.1",
@@ -20,5 +20,6 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {}
 }
