--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
   "name": "palabreo",
-  "version": "0.1.0",
+  "version": "1.1.1",
   "scripts": {
-    "format": "prettier --write --plugin-search-dir=. src/**/*.svelte",
-    "local": "npm start | grep -v Unused",
-    "start": "npm run dev",
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build | grep -v Unused",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^14.0.0-next.0",
+    "@angular/cdk": "^14.2.0",
+    "@angular/common": "^14.0.0-next.0",
+    "@angular/compiler": "^14.0.0-next.0",
+    "@angular/core": "^14.0.0-next.0",
+    "@angular/fire": "^7.4.1",
+    "@angular/forms": "^14.0.0-next.0",
+    "@angular/material": "^14.2.0",
+    "@angular/platform-browser": "^14.0.0-next.0",
+    "@angular/platform-browser-dynamic": "^14.0.0-next.0",
+    "@angular/router": "^14.0.0-next.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@onivoro/nodejs-cli-sdk": "^0.36.0",
-    "@onivoro/server-disk": "^0.3.0",
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "next",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.6.0",
-    "sass": "^1.43.3",
-    "svelte": "^3.42.6",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.9.4",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
-  },
-  "type": "module",
-  "dependencies": {
-    "@onivoro/browser-layout": "^0.72.0",
-    "@onivoro/isomorphic-seo": "^1.1.0",
-    "dayjs": "^1.10.7",
-    "firebase": "^9.6.6"
+    "@angular-devkit/build-angular": "^14.2.0",
+    "@angular/cli": "~14.2.0",
+    "@angular/compiler-cli": "^14.0.0-next.0",
+    "@types/jasmine": "~4.0.0",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.7.2"
   }
 }
